@@ -177,6 +177,7 @@ from ToolPlugValueWidget import ToolPlugValueWidget
 from CompoundDataPlugValueWidget import CompoundDataPlugValueWidget
 from SectionedCompoundDataPlugValueWidget import SectionedCompoundDataPlugValueWidget
 import ExecuteUI
+import ScriptNodeUI
 
 # then stuff specific to parameterised objects
 
